operation validations